--- a/articles.html
+++ b/articles.html
@@ -189,6 +189,7 @@
                 </a>
                 <figcaption class="font-weight-normal mb-2">
                   <a href="#" class="d-block mb-2">Монтаж бризера Тион О2 в частном доме</a>
+                  <i class="d-block mb-2">27.09.2019</i>
                   <p>Офис страховой организации "Согласие" находится в центре города, что накладывает ограничения на частые проветривания рабочих кабинетов. Компания Согласие позаботилась о своих сотрудниках и после установки компактной приточной вентиляции в каждом кабинете офиса проблема духоты, сквозняков и шума была успешно решена. </p>
                 </figcaption>
               </figure>
@@ -200,6 +201,7 @@
                 </a>
                 <figcaption class="font-weight-normal mb-2">
                   <a href="#" class="d-block mb-2">Монтаж бризера Тион О2 в частном доме</a>
+                  <i class="d-block mb-2">27.09.2019</i>
                   <p>Офис строительной организации находится в центре...</p>
                 </figcaption>
               </figure>
@@ -211,6 +213,7 @@
                 </a>
                 <figcaption class="font-weight-normal mb-2">
                   <a href="#" class="d-block mb-2">Монтаж бризера Тион О2 в частном доме</a>
+                  <i class="d-block mb-2">27.09.2019</i>
                   <p>Крупный проект по реализации приточной вентиляции в Новосибирском офисе "Все майки". Клиент выбрал вентиляцию Тион О2 с точки зрения высокого уровня очистки воздуха.</p>
                 </figcaption>
               </figure>
@@ -222,6 +225,7 @@
                 </a>
                 <figcaption class="font-weight-normal mb-2">
                   <a href="#" class="d-block mb-2">Монтаж бризера Тион О2 в частном доме</a>
+                  <i class="d-block mb-2">27.09.2019</i>
                   <p>Крупный проект по реализации приточной вентиляции в Новосибирском офисе "Все майки". Клиент выбрал вентиляцию Тион О2 с точки зрения высокого уровня очистки воздуха.</p>
                 </figcaption>
               </figure>
