--- a/promo.html
+++ b/promo.html
@@ -185,32 +185,35 @@
           <hr class="divider">
           <section class="row">
             <div class="col-md mb-4 mb-md-0 flex-centered align-items-center">
-              <img src="img/promo-img-1.jpg" alt="Скидка 50% на монтаж бризера 3S" class="img-responsive">
+              <img src="img/promo-img-1.jpg" alt="Скидка 50% на монтаж бризера 3S" class="img-responsive mb-3">
+              <i class="d-block h4">1–31 июля 2019</i>
             </div>
             <div class="col-md">
               <h2 class="h3">Скидка 50% на монтаж бризера 3S</h2>
-              <p><span>1–31 июля 2019</span><br><span>Закажите бризер 3S в интернет-магазине Тион и получите монтаж за полцены!</span></p>
+              <p><span>Закажите бризер 3S в интернет-магазине Тион и получите монтаж за полцены!</span></p>
               <p><span>Скидка 50% на монтаж бризера 3S не распространяется на другие модели бризеров (Tion Бризер O2, Tion Бризер Lite) и действует только на территории РФ. При покупке бризера 3S в июле клиент может заказать монтаж до 31 августа 2019, при этом заявка на монтаж должна быть оформлена не позднее 15 августа 2019. В более поздние даты скидка на монтаж не действует; если клиент не воспользовался скидкой в июле и августе, монтаж оплачивается по полной стоимости.</span></p>
             </div>
           </section>
           <hr class="divider">
           <section class="row">
             <div class="col-md mb-4 mb-md-0 flex-centered align-items-center">
-              <img src="img/promo-img-2.jpg" alt="Розыгрыш увлажнителя воздуха" class="img-responsive">
+              <img src="img/promo-img-2.jpg" alt="Розыгрыш увлажнителя воздуха" class="img-responsive mb-3">
+              <i class="d-block h4">5-18 августа 2019</i>
             </div>
             <div class="col-md">
               <h2 class="h3">Розыгрыш увлажнителя воздуха</h2>
-              <p><span>5-18 августа 2019</span><br><span>Заполните форму и получите шанс выиграть увлажнитель&nbsp;воздуха&nbsp;Leberg&nbsp;LH-206!</span></p>
+              <p><span>Заполните форму и получите шанс выиграть увлажнитель&nbsp;воздуха&nbsp;Leberg&nbsp;LH-206!</span></p>
             </div>
           </section>
           <hr class="divider">
           <section class="row">
             <div class="col-md mb-4 mb-md-0 flex-centered align-items-center">
-              <img src="img/promo-img-3.jpg" alt="Скидка 50% на монтаж бризера 3S" class="img-responsive">
+              <img src="img/promo-img-3.jpg" alt="Скидка 50% на монтаж бризера 3S" class="img-responsive mb-3">
+              <i class="d-block h4">1–31 июля 2019</i>
             </div>
             <div class="col-md">
               <h2 class="h3">Скидка 50% на монтаж бризера 3S</h2>
-              <p><span>1–31 июля 2019</span><br><span>Закажите бризер 3S в интернет-магазине Тион и получите монтаж за полцены!</span></p>
+              <p><span>Закажите бризер 3S в интернет-магазине Тион и получите монтаж за полцены!</span></p>
               <p><span>Скидка 50% на монтаж бризера 3S не распространяется на другие модели бризеров (Tion Бризер O2, Tion Бризер Lite) и действует только на территории РФ. При покупке бризера 3S в июле клиент может заказать монтаж до 31 августа 2019, при этом заявка на монтаж должна быть оформлена не позднее 15 августа 2019. В более поздние даты скидка на монтаж не действует; если клиент не воспользовался скидкой в июле и августе, монтаж оплачивается по полной стоимости.</span></p>
             </div>
           </section>
