--- a/cart.html
+++ b/cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru" itemscope itemtype="http://schema.org/WebPage">
   <head>
-    <title>Контакты</title>
+    <title>Корзина</title>
     <meta charset="utf-8">
     <meta name="keywords" content="Продажа бризеров, монтаж бризеров">
     <meta name="description" content="Продажа и монтаж бризеров в Москве и области">
@@ -177,31 +177,176 @@
                   <meta itemprop="position" content="1">
                 </a>
               </li>
-              <li class="breadcrumb-item">Контакты</li>
+              <li class="breadcrumb-item">Корзина</li>
             </ul>
           </div>
         </nav>
         <div class="container page-section">
-          <h1 class="h2">Контакты</h1>
-          <div class="row page-section">
-            <section class="col-md mb-5 mb-md-0">
-              <h2 class="sr-only">Контактные данные</h2>
-              <p class="con-phone contact-icon"><span class="label-contact">Телефон офиса в Москве:</span> +7 (495) 777-93-70<br>
-                <span class="label-contact">Бесплатно по России:</span> 8 (800) 200-75-88</p>
-              <p class="con-email contact-icon"><span class="label-contact">Адрес электронной почты:</span> <a href="mailto:teplo585@yandex.ru">teplo585@yandex.ru</a></p>
-              <p class="con-time contact-icon"><span class="label-contact">Время работы офиса:</span>с 9:00 до 18:00 по будням.<br>
-                В остальное время отправьте нам сообщение любым удобным способом, мы обязательно Вам перезвоним.</p>
-              <p class="min-tit">Наш адрес и схема проезда</p>
-              <p class="con-pickup contact-icon"><span class="up">Пункт самовывоза оборудования:</span><br>
-                м. Перово, 111141, г.Москва, ул. Кусковская 20а</p>
-              <p class="con-pickup contact-icon"><span class="up">Офис и склад:</span><br>
-                м. Новогиреево, 143966, Московская область, г Реутов, ул. Победы, д.9, офис 227, Вход под вывеской "Автошкола"</p>
+          <h1>Оформление заказа</h1>
+          <form method="POST" class="page-section">
+            <section class="page-section">
+              <h2 class="sr-only">Ваша корзина</h2>
+              <ul class="cart-box">
+                <li class="cart-box-item">
+                  <a href="/" class="cart-box-item-img-wrap img-proportion square"><span class="img-proportion-inner"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/product-img-1.jpg" class="img-responsive img-lazy" alt="Бризер Тион 3S"></span></a>
+                  <a href="/" class="cart-box-item-title">Бризер Тион 3S</a>
+                  <div class="input-group input-group-quantity cart-box-item-input-quantity">
+                    <div class="input-group-prepend">
+                      <button type="button" class="btn btn-action btn-action-reduce" onclick="$(this).parent().next()[0].stepDown();$(this).next().trigger('input');" aria-label="Убрать один товар">
+                        <svg viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem">
+                          <path d="M.806 8.75h17.48c.56 0 .713.336.713.75s-.197.75-.72.75H.81c-.668 0-.81-.336-.81-.75s.142-.75.806-.75z"></path>
+                        </svg>
+                      </button>
+                    </div>
+                    <input type="number" class="form-control" step="1" min="1" max="20" value="1" aria-label="Изменить количество">
+                    <div class="input-group-append">
+                      <button type="button" class="btn btn-action btn-action-increase" onclick="$(this).parent().prev()[0].stepUp();$(this).prev().trigger('input');" aria-label="Добавить один товар">
+                        <svg viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem">
+                          <path d="M10 9h8.5a.5.5 0 0 1 0 1H10v8.5a.5.5 0 1 1-1 0V10H.5a.5.5 0 1 1 0-1H9V.5a.5.5 0 0 1 1 0V9z" fill-rule="evenodd" clip-rule="evenodd"></path>
+                        </svg>
+                      </button>
+                    </div>
+                  </div>
+                  <div class="cart-box-item-price-wrap"><span class="cart-box-item-price">44 900</span><span class="cart-box-item-price-currency"> &#8381;</span></div>
+                  <button type="button" class="btn btn-action btn-action-delete" aria-label="Убрать товар из корзины"><span aria-hidden="true">&times;</span></button>
+                </li>
+                <li class="cart-box-item">
+                  <a href="/" class="cart-box-item-img-wrap img-proportion square"><span class="img-proportion-inner"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/product-img-1.jpg" class="img-responsive img-lazy" alt="Бризер Тион 3S"></span></a>
+                  <span class="cart-box-item-title">Стандартный Монтаж Бризера Тион 3S</span>
+                  <div class="input-group input-group-quantity cart-box-item-input-quantity">
+                    <div class="input-group-prepend">
+                      <button type="button" class="btn btn-action btn-action-reduce" onclick="$(this).parent().next()[0].stepDown();" aria-label="Убрать один товар">
+                        <svg viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem">
+                          <path d="M.806 8.75h17.48c.56 0 .713.336.713.75s-.197.75-.72.75H.81c-.668 0-.81-.336-.81-.75s.142-.75.806-.75z"></path>
+                        </svg>
+                      </button>
+                    </div>
+                    <input type="number" class="form-control" step="1" min="1" max="20" value="1" aria-label="Изменить количество">
+                    <div class="input-group-append">
+                      <button type="button" class="btn btn-action btn-action-increase" onclick="$(this).parent().prev()[0].stepUp();" aria-label="Добавить один товар">
+                        <svg viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem">
+                          <path d="M10 9h8.5a.5.5 0 0 1 0 1H10v8.5a.5.5 0 1 1-1 0V10H.5a.5.5 0 1 1 0-1H9V.5a.5.5 0 0 1 1 0V9z" fill-rule="evenodd" clip-rule="evenodd"></path>
+                        </svg>
+                      </button>
+                    </div>
+                  </div>
+                  <div class="cart-box-item-price-wrap"><a href="#" class="small">добавить монтаж</a></div>
+                  <button type="button" class="btn btn-action btn-action-delete" aria-label="Убрать товар из корзины"><span aria-hidden="true">&times;</span></button>
+                </li>
+                <li class="cart-box-item">
+                  <a href="/" class="cart-box-item-img-wrap img-proportion square"><span class="img-proportion-inner"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/product-img-1.jpg" class="img-responsive img-lazy" alt="Бризер Тион 3S"></span></a>
+                  <span class="cart-box-item-title">Базовая станция Tion MagicAir</span>
+                  <div class="input-group input-group-quantity cart-box-item-input-quantity">
+                    <p class="form-control-plaintext">1</p>
+                  </div>
+                  <div class="cart-box-item-price-wrap text-third">
+                    <span class="icon-giftbox"></span>
+                    <span>Подарок</span>
+                  </div>
+                  <button type="button" class="btn btn-action btn-action-delete" aria-label="Убрать товар из корзины"><span aria-hidden="true">&times;</span></button>
+                </li>
+              </ul>
             </section>
-            <section class="col-md">
-              <h2 class="sr-only">Карта сайта</h2>
-              <div id="map" class="map"></div>
+            <section class="row justify-content-center">
+              <div class="col-md-8 col-lg-6">
+                <h2 class="h4 mb-3">Заполните форму</h2>
+                <div class="form-row">
+                  <div class="col-sm-6">
+                    <div class="input-group mb-3">
+                      <input type="text" class="form-control" name="order[name]" placeholder="Имя" aria-label="Имя" required>
+                    </div>
+                  </div>
+                  <div class="col-sm-6">
+                    <div class="input-group mb-3">
+                      <input type="email" class="form-control" name="order[email]" placeholder="E-mail" aria-label="E-mail" required>
+                    </div>
+                  </div>
+                </div>
+                <div class="input-group mb-3">
+                  <input type="text" class="form-control phone" name="order[phone]" placeholder="Телефон" aria-label="Телефон" required>
+                </div>
+                <div class="input-group mb-3">
+                  <textarea id="order-comment" class="form-control" name="order[comment]" placeholder="Комментарий" aria-label="Комментарий" required></textarea>
+                </div>
+                <div id="form-collapse-parent">
+                  <div class="form-row">
+                    <div class="col-6">
+                      <div class="input-group mb-3">
+                        <div class="custom-control custom-radio">
+                          <input type="radio" class="custom-control-input" name="order[payment-method]" id="payment-method-1" value="Оплата наличными" checked required>
+                          <label class="custom-control-label" for="payment-method-1">Оплата наличными</label>
+                        </div>
+                      </div>
+                      <div class="input-group mb-3">
+                        <div class="custom-control custom-radio">
+                          <input type="radio" class="custom-control-input" name="order[payment-method]" id="payment-method-2" value="Оплата картой" required>
+                          <label class="custom-control-label mb-2" for="payment-method-2">Оплата картой</label>
+                          <ul class="list-unstyled d-flex align-items-center mb-0">
+                            <li class="mr-1"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/payment-method-img-1.png" class="img-responsive img-lazy" alt="Mastercard" title="Mastercard"></li>
+                            <li class="mr-1"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/payment-method-img-2.png" class="img-responsive img-lazy" alt="Visa" title="Visa"></li>
+                            <li class="mr-1"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/payment-method-img-3.png" class="img-responsive img-lazy" alt="Яндекс Деньги" title="Яндекс Деньги"></li>
+                            <li><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/payment-method-img-5.png" class="img-responsive img-lazy" alt="Qiwi" title="Qiwi"></li>
+                          </ul>
+                        </div>
+                      </div>
+                      <div class="input-group mb-4">
+                        <div class="custom-control custom-radio">
+                          <input type="radio" class="custom-control-input" name="order[payment-method]" id="payment-method-3" value="Оплата в рассрочку без % " required>
+                          <label class="custom-control-label mb-2" for="payment-method-3">Оплата в рассрочку без % </label>
+                          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/banks.png" alt="Оплата в рассрочку без %" class="img-responsive img-lazy">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-6">
+                      <div class="input-group mb-3">
+                        <div class="custom-control custom-radio">
+                          <input type="radio" class="custom-control-input" name="order[delivery-method]" id="delivery-method-1" value="Самовывоз" checked required>
+                          <label class="custom-control-label collapsed" for="delivery-method-1" data-toggle="collapse" data-target="#form-collapse-1" aria-controls="form-collapse-1">Самовывоз</label>
+                        </div>
+                      </div>
+                      <div class="input-group mb-4">
+                        <div class="custom-control custom-radio">
+                          <input type="radio" class="custom-control-input" name="order[delivery-method]" id="delivery-method-2" value="Доставка" required>
+                          <label class="custom-control-label mb-3" for="delivery-method-2" data-toggle="collapse" data-target="#form-collapse-2" aria-controls="form-collapse-2">Доставка</label>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="form-collapse-1" class="form-collapse collapse" data-parent="#form-collapse-parent"></div>
+                  <div id="form-collapse-2" class="form-collapse collapse" data-parent="#form-collapse-parent">
+                    <div class="input-group mb-3">
+                      <input type="text" class="form-control" name="order[address]" placeholder="Адрес" aria-label="Адрес" required>
+                    </div>
+                    <div class="form-row">
+                      <div class="col-6">
+                        <div class="input-group mb-5">
+                          <input type="text" class="form-control" name="order[house]" placeholder="Дом" aria-label="Дом" required>
+                        </div>
+                      </div>
+                      <div class="col-6">
+                        <div class="input-group mb-5">
+                          <input type="text" class="form-control" name="order[appart]" placeholder="Квартира" aria-label="Квартира" required>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="input-group mb-5">
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" name="order[security-consense]" id="security-consense" checked required>
+                    <label class="custom-control-label" for="security-consense">Я ознакомлен и согласен с <a href="#">условиями</a></label>
+                  </div>
+                </div>
+                <div class="cart-check">
+                  <div class="d-flex align-items-end justify-content-between mb-3">
+                    <span class="cart-check-label">Сумма к оплате:</span>
+                    <span class="cart-check-price">2340434 &#8381;</span>
+                  </div>
+                  <button type="submit" class="btn btn-main d-block w-100">Оформить заказ</button>
+                </div>
+              </div>
             </section>
-          </div>
+          </form>
         </div>
         <section class="page-section page-section-colored py-5">
           <div class="container">
