--- a/markup/article.html
+++ b/markup/article.html
@@ -50,7 +50,7 @@
               <li class="col px-0 mobile-controls-list-item">
                 <form class="search search-mobile">
                   <input type="text" name="search" placeholder="Поиск" class="search-input form-control mobile-control" aria-label="Поиск" required>
-                  <button type="button" class="btn search-btn mobile-control" aria-label="Кнопка для поиска"><span class="icon-search"></span></button>
+                  <button type="submit" class="btn search-btn mobile-control" aria-label="Кнопка для поиска"><span class="icon-search"></span></button>
                   <button type="reset" class="btn search-reset mobile-control" aria-label="Кнопка для очистки поля поиска"><span class="icon-times"></span></button>
                 </form>
               </li>
@@ -159,7 +159,7 @@
               </ul>
               <form class="search d-none d-lg-block">
                 <input type="text" name="search" placeholder="Поиск" class="search-input form-control" aria-label="Поиск" required>
-                <button type="button" class="search-btn btn" aria-label="Кнопка для поиска"><span class="icon-search"></span></button>
+                <button type="submit" class="search-btn btn" aria-label="Кнопка для поиска"><span class="icon-search"></span></button>
                 <button type="reset" class="search-reset btn" aria-label="Кнопка для очистки поля поиска"><span class="icon-times"></span></button>
               </form>
             </div>
@@ -245,7 +245,7 @@
                       </svg>
                     </button>
                   </div>
-                  <input type="number" class="form-control" step="1" min="1" max="20" value="1">
+                  <input type="number" class="form-control" step="1" min="1" max="20" value="1" aria-label="Количество товара">
                   <div class="input-group-append">
                     <button class="btn btn-action btn-action-increase" onclick="$(this).parent().prev()[0].stepUp();$(this).prev().trigger('input');" aria-label="Добавить один товар">
                       <svg viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem">
@@ -268,7 +268,7 @@
                       </svg>
                     </button>
                   </div>
-                  <input type="number" class="form-control" step="1" min="1" max="20" value="1">
+                  <input type="number" class="form-control" step="1" min="1" max="20" value="1" aria-label="Количество товара">
                   <div class="input-group-append">
                     <button class="btn btn-action btn-action-increase" onclick="$(this).parent().prev()[0].stepUp();$(this).prev().trigger('input');" aria-label="Добавить один товар">
                       <svg viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem">
