--- a/markup/catalog-detail.html
+++ b/markup/catalog-detail.html
@@ -49,7 +49,7 @@
               <li class="col px-0 mobile-controls-list-item">
                 <form class="search search-mobile">
                   <input type="text" name="search" placeholder="Поиск" class="search-input form-control mobile-control" aria-label="Поиск" required>
-                  <button type="button" class="btn search-btn mobile-control" aria-label="Кнопка для поиска"><span class="icon-search"></span></button>
+                  <button type="submit" class="btn search-btn mobile-control" aria-label="Кнопка для поиска"><span class="icon-search"></span></button>
                   <button type="reset" class="btn search-reset mobile-control" aria-label="Кнопка для очистки поля поиска"><span class="icon-times"></span></button>
                 </form>
               </li>
@@ -158,7 +158,7 @@
               </ul>
               <form class="search d-none d-lg-block">
                 <input type="text" name="search" placeholder="Поиск" class="search-input form-control" aria-label="Поиск" required>
-                <button type="button" class="search-btn btn" aria-label="Кнопка для поиска"><span class="icon-search"></span></button>
+                <button type="submit" class="search-btn btn" aria-label="Кнопка для поиска"><span class="icon-search"></span></button>
                 <button type="reset" class="search-reset btn" aria-label="Кнопка для очистки поля поиска"><span class="icon-times"></span></button>
               </form>
             </div>
@@ -250,22 +250,22 @@
                         </div>
                       </div>
                       <div class="slider-thumbnails owl-carousel">
-                        <a href="#view-photo-1" class="slider-thumbnail img-proportion square" data-id="view-thumbnail-1">
+                        <a href="#view-photo-1" class="slider-thumbnail img-proportion square" data-id="view-thumbnail-1" aria-label="Открыть фото Бризера Тион 3S">
                           <span class="img-proportion-inner">
                             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/slider-img-1.jpg" class="img-responsive owl-lazy" alt="Бризер Тион 3S">
                           </span>
                         </a>
-                        <a href="#view-photo-2" class="slider-thumbnail img-proportion square" data-id="view-thumbnail-2">
+                        <a href="#view-photo-2" class="slider-thumbnail img-proportion square" data-id="view-thumbnail-2" aria-label="Открыть фото Бризера Тион 3S">
                           <span class="img-proportion-inner">
                             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/slider-img-2.jpg" class="img-responsive owl-lazy" alt="Бризер Тион 3S">
                           </span>
                         </a>
-                        <a href="#view-photo-3" class="slider-thumbnail img-proportion square" data-id="view-thumbnail-3">
+                        <a href="#view-photo-3" class="slider-thumbnail img-proportion square" data-id="view-thumbnail-3" aria-label="Открыть фото Бризера Тион 3S">
                           <span class="img-proportion-inner">
                             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/slider-img-3.jpg" class="img-responsive owl-lazy" alt="Бризер Тион 3S">
                           </span>
                         </a>
-                        <a href="#view-photo-4" class="slider-thumbnail img-proportion square" data-id="view-thumbnail-4">
+                        <a href="#view-photo-4" class="slider-thumbnail img-proportion square" data-id="view-thumbnail-4" aria-label="Открыть фото Бризера Тион 3S">
                           <span class="img-proportion-inner">
                             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/slider-img-4.jpg" class="img-responsive owl-lazy" alt="Бризер Тион 3S">
                           </span>
@@ -1959,7 +1959,7 @@
                       </svg>
                     </button>
                   </div>
-                  <input type="number" class="form-control" step="1" min="1" max="20" value="1">
+                  <input type="number" class="form-control" step="1" min="1" max="20" value="1" aria-label="Количество товара">
                   <div class="input-group-append">
                     <button class="btn btn-action btn-action-increase" onclick="$(this).parent().prev()[0].stepUp();$(this).prev().trigger('input');" aria-label="Добавить один товар">
                       <svg viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem">
@@ -1982,7 +1982,7 @@
                       </svg>
                     </button>
                   </div>
-                  <input type="number" class="form-control" step="1" min="1" max="20" value="1">
+                  <input type="number" class="form-control" step="1" min="1" max="20" value="1" aria-label="Количество товара">
                   <div class="input-group-append">
                     <button class="btn btn-action btn-action-increase" onclick="$(this).parent().prev()[0].stepUp();$(this).prev().trigger('input');" aria-label="Добавить один товар">
                       <svg viewBox="0 0 19 19" xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem">
