--- a/markup/portfolio.html
+++ b/markup/portfolio.html
@@ -181,7 +181,7 @@
             </ul>
           </div>
         </nav>
-        <div class="container">
+        <div class="container page-section">
           <div class="row align-items-center justify-content-between mb-4">
             <div class="col-md-5 col-lg-7 mb-4 mb-md-0 text-center text-md-left">
               <h1 class="mb-0">Наши проекты</h1>
@@ -252,9 +252,9 @@
                   <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/work-img-1.jpg" alt="Монтаж бризера Тион О2 в частном доме" class="img-responsive img-lazy">
                 </a>
                 <figcaption class="font-weight-normal mb-3">
-                  <h5 class="h7">Монтаж бризера Тион О2 в частном доме</h5>
-                  <h6 class="text-main">Офис страховой организации "Согласие"</h6>
-                  <p>Офис страховой организации "Согласие" находится в центре города, что накладывает ограничения на частые проветривания рабочих кабинетов. Компания Согласие позаботилась о своих сотрудниках и после установки компактной приточной вентиляции в каждом кабинете офиса проблема духоты, сквозняков и шума была успешно решена. </p>
+                  <h2 class="h7 text-left">Монтаж бризера Тион О2 в частном доме</h2>
+                  <h3 class="h6 text-main">Офис страховой организации "Согла3ие"</h6>
+                    <p>Офис страховой организации "Согласие" находится в центре города, что накладывает ограничения на частые проветривания рабочих кабинетов. Компания Согласие позаботилась о своих сотрудниках и после установки компактной приточной вентиляции в каждом кабинете офиса проблема духоты, сквозняков и шума была успешно решена. </p>
                 </figcaption>
               </figure>
             </div>
@@ -264,8 +264,8 @@
                   <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/work-img-2.jpg" alt="Монтаж бризера Тион О2 в частном доме" class="img-responsive img-lazy">
                 </a>
                 <figcaption class="font-weight-normal mb-3">
-                  <h5 class="h7">Монтаж бризера Тион О2 в частном доме</h5>
-                  <h6 class="text-main">Офис строительной организации</h6>
+                  <h2 class="h7 text-left">Монтаж бризера Тион О2 в частном доме</h2>
+                  <h3 class="h6 text-main">Офис строительной организации</h3>
                   <p>Офис строительной организации находится в центре города, что накладывает ограничения на частые проветривания рабочих кабинетов. Компания Согласие позаботилась о своих сотрудниках и после установки компактной приточной вентиляции в каждом кабинете офиса проблема духоты, сквозняков и шума была успешно решена. </p>
                 </figcaption>
               </figure>
@@ -276,8 +276,8 @@
                   <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/work-img-1.jpg" alt="Монтаж бризера Тион О2 в частном доме" class="img-responsive img-lazy">
                 </a>
                 <figcaption class="font-weight-normal mb-3">
-                  <h5 class="h7">Монтаж бризера Тион О2 в частном доме</h5>
-                  <h6 class="text-main">Установка бризера в школе</h6>
+                  <h2 class="h7 text-left">Монтаж бризера Тион О2 в частном доме</h2>
+                  <h3 class="h6 text-main">Установка бризера в школе</h3>
                   <p>Крупный проект по реализации приточной вентиляции в Новосибирском офисе "Все майки". Клиент выбрал вентиляцию Тион О2 с точки зрения высокого уровня очистки воздуха.</p>
                 </figcaption>
               </figure>
@@ -288,8 +288,8 @@
                   <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/work-img-2.jpg" alt="Монтаж бризера Тион О2 в частном доме" class="img-responsive img-lazy">
                 </a>
                 <figcaption class="font-weight-normal mb-3">
-                  <h5 class="h7">Монтаж бризера Тион О2 в частном доме</h5>
-                  <h6 class="text-main">Установка бризера в квартире</h6>
+                  <h2 class="h7 text-left">Монтаж бризера Тион О2 в частном доме</h2>
+                  <h3 class="h6 text-main">Установка бризера в квартире</h3>
                   <p>Крупный проект по реализации приточной вентиляции в Новосибирском офисе "Все майки". Клиент выбрал вентиляцию Тион О2 с точки зрения высокого уровня очистки воздуха.</p>
                 </figcaption>
               </figure>
@@ -419,6 +419,18 @@
             </div>
           </article>
         </div>
+        <article class="page-section page-section-colored py-5">
+          <div class="container">
+            <h2 class="h4 font-weight-normal text-center">Принимаем к оплате</h2>
+            <ul class="list-unstyled d-flex justify-content-center align-items-center mb-0">
+              <li class="px-2"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/payment-method-img-1.png" class="img-responsive img-lazy" alt="Mastercard" title="Mastercard"></li>
+              <li class="px-2"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/payment-method-img-2.png" class="img-responsive img-lazy" alt="Visa" title="Visa"></li>
+              <li class="px-2"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/payment-method-img-3.png" class="img-responsive img-lazy" alt="Яндекс Деньги" title="Яндекс Деньги"></li>
+              <li class="px-2"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/payment-method-img-4.png" class="img-responsive img-lazy" alt="WebMoney" title="WebMoney"></li>
+              <li class="px-2"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/payment-method-img-5.png" class="img-responsive img-lazy" alt="Qiwi" title="Qiwi"></li>
+            </ul>
+          </div>
+        </article>
       </main>
       <footer id="page-footer" class="page-footer">
         <div class="container">
